package com.sampleandroidarchitecture.ui

class TestTags {
    companion object{
        const val SEARCH = "SEARCH"
        const val DAYS_PAGER = "DAYS_PAGER"
        const val DAY_PAGE = "DAY_PAGE"
        const val RETRY_BUTTON = "RETRY_BUTTON"
        const val LOADING_SCREEN = "LOADING_SCREEN"
        const val PREVIOUS_DAY_BUTTON = "PREVIOUS_DAY_BUTTON"
        const val NEXT_DAY_BUTTON = "NEXT_DAY_BUTTON"
    }
}