...
    ){
        IconButton(
            modifier = Modifier.fillMaxHeight(),
            onClick = { onBack() }) {
            Icon(
                imageVector = Icons.Filled.ArrowBack,
                contentDescription = "Back"
            )
        }
        Text(
            modifier = Modifier
                .fillMaxWidth()
                .wrapContentHeight()
...
